2007-02-07  Michael McCarty <mkmccarty@raceintospace.org>
	* V125

	* Fix Mac compile

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-02-07  Michael McCarty <mkmccarty@raceintospace.org>
 
+	* V125
+
+	* Fix Mac compile
+
+2007-02-07  Michael McCarty <mkmccarty@raceintospace.org>
+
 	* V124
 
 	* Changed reading of VAB.IMG and added a comment on the
