--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2007-02-10	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V129
+
+	* New algorithm for tracking graphics updates and lot of changes here and
+	there to get it working.
+
+	* Few improvements in mmfile implementation
+
+	* New script to encode raw->ogg
+
+	* Made fades and audio optional (cmdline options -f -a)
+
+	* Updated manpage, probably should be moved to section 6
+
 2007-02-07  Michael McCarty <mkmccarty@raceintospace.org>
 
 	* V128
