--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-02-12  Michael McCarty <mkmccarty@raceintospace.org>
+
+	* V130
+
+	* Removed some unused variables so it works on the Mac build again.
+
+	* Great work on the fades, it looks great.
+
 2007-02-10	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V129
