--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-02-12  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V131
+
+	* New utilities mknews.c and news2raw.pl for extracting video and audio
+	from news files.
+
 2007-02-12  Michael McCarty <mkmccarty@raceintospace.org>
 
 	* V130
