--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,158 @@
+2007-02-19  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V132
+
+	* Merged changes from B1-theora_and_ogg:
+
+	* All videos and music now use theora and vorbis.
+
+	* New directory structure for audio, video and game data.
+
+	* Win32 cross-compilation and binary installer setup.
+
+	* Fixes in drawing code, mostly related to tracking screen updates.
+
+2007-02-19  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V12
+
+	* Fixed stills/movies button in preferences screen.
+
+	* Fixed roster editing screen.
+
+2007-02-19  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V11
+
+	* Manpage moved to category 6, some changes there.
+
+	* Added rules for building gamedata tarballs.
+
+2007-02-19  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V10
+
+	* Added windows installer configuration file. To build one you need
+	Nullsoft Scriptable Install System (nsis). Package with same name is in
+	debian repositories.
+
+	* Added support for win32 environment variables.
+
+	* Added icon file Shuttle.ico found on Peyre's page.
+
+	* Verified that current setup works fine with my Win XP installation.
+
+	* Hacked the os_win32 directory so one can have separate builds from same
+	configure.in and Makefile.
+
+	* Changes to Makefile.in to make it more configure friendly.
+
+2007-02-19  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V9
+
+	* Fixed displaying failed mission steps, in replay too.
+
+	* Changes in audio, back to U8 and now using SDL_MixAudio().
+
+	* Added screen update while querying for savegame description.
+
+	* Some enchancements in checkin3 script.
+
+2007-02-17  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V8
+
+	* New gamedata directory layout as discussed in e-mails.
+
+	* New module "fs" implementing filesystem access functions.
+
+	* New module "options" implementing preferences setup.
+
+	* Changes in ordering configure tests to match autoconf documentation.
+
+	* Removed frm file implementation.
+
+	* race.h.in now is generated automatically by autoheader.
+
+	* Displaying failure sequences is broken and needs fixing.
+
+	* Removed CONFIG file support, need to include it again.
+
+2007-02-16  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V7
+
+	* Added fades in intro.c
+
+	* Fixed almost all remaining fades.
+
+	* Some changes with redraws, fades and music in port.c
+
+	* Sounds accompanying spots are now properly silenced.
+
+	* News and spot sounds now use Vorbis audio.
+
+	* Removed option to turn off fades.
+
+	* Buttons now properly interact with dirty rectangle tree.
+
+	* In the middle of rewriting gamedata access code...
+
+2007-02-15  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V6
+
+	* Static news event images are now displayed correctly.
+
+	* Added keyboard autorepeat.
+
+2007-02-14  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V5
+
+	* mknews.c can overlay "continue" button on newscaster movies.
+
+	* Some fade-related fixes (unification, redraws).
+
+	* Fixed a bug corrupting EVENT.TMP at beginning of turn.
+
+2007-02-14  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V4
+
+	* Game now uses signed 8bit audio (easier to mix).
+
+	* Rewrote audio mixer & fixed cracks and noises.
+
+	* Fixed audio lags in windows.
+
+	* Fixed mingw build (conflicting defines of min and max macros).
+
+2007-02-14  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V3
+
+	* Sorry for previous log messages, now using new checkin3 script.
+
+2007-02-14  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V2
+
+	* Removed CONFIG_THEORA_VIDEO define and all dependant code.
+
+	* Ogg, Vorbis and Theora are now required to build raceintospace.
+
+	* Removed dependency on Vorbisfile, mmfile has the same functionality.
+
+2007-02-14  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* B1-V1
+
+	* New branch for replacing old audio & video with theora and vorbis
+
+	* News now use theora files, but this is still not perfect.
+
 2007-02-12  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V131
