--- a/raceintospace.6
+++ b/raceintospace.6
@@ -20,23 +20,15 @@ Disable audio output
 .TP
 .B -i
 Do not skip introduction screens
-.TP
-.B -f
-Turn off screen fading in the game
+.\".TP
+.\".B -f
+.\"Turn off screen fading in the game
 .TP
 .B -n
 Enable cheating and force successful completion of each mission
 .SH ENVIRONMENT
-.IP BARIS_ROOT
-Should point at the root of directory containing CD-ROM files from original BARIS
-game. Defaults to /usr/share/raceintospace/cdrom
-.SH FILES
-.I ~/.raceintospace/CONFIG
-.RS
-File should contain pairs of name and directory on each line. Currently supported
-names are `cdrom', `music' and `movies'.
-.B raceintospace
-will look for game files in the specified directories.
+.IP BARIS_DATA
+Should point at the root of directory containing data files. Defaults to \fI/usr/share/raceintospace\fR
 .RE
 .SH AUTHOR
 Original game was designed by Fritz Bronner and coded by Michael K. McCarty.
