--- a/raceintospace.6
+++ b/raceintospace.6
@@ -19,7 +19,7 @@ based game in 1992 and a cd-rom in 1994.
 Disable audio output
 .TP
 .B -i
-Do not skip introduction screens
+Do skip introduction screens
 .\".TP
 .\".B -f
 .\"Turn off screen fading in the game
@@ -35,5 +35,10 @@ Original game was designed by Fritz Bronner and coded by Michael K. McCarty.
 This reworked version was co-authored by Michael K. McCarthy, Pace Willisson,
 Krzysztof Kosciuszkiewicz and others. See also the AUTHORS file in source
 distribution.
+.SH FILES
+.IP ~/.raceintospace/config
+Contains the same options that can be specified using environment variables or
+on the command line.
+.RE
 .SH SEE ALSO
 http://raceintospace.org/
