--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-02-20  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
+	* V134
+
+	* Wrote AUTHORS, rewrote DEVELOPER, README
+
+	* Some fixes for tar rules and windows installer.
+
+2007-02-20  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
 	* V133
 
 	* Rewrote config file code.
@@ -9,6 +17,20 @@
 	* Commented out unnecessary console output.
 
 	* Added few copyright notices.
+
+2007-02-19  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V132
+
+	* Merged changes from B1-theora_and_ogg:
+
+	* All videos and music now use theora and vorbis.
+
+	* New directory structure for audio, video and game data.
+
+	* Win32 cross-compilation and binary installer setup.
+
+	* Fixes in drawing code, mostly related to tracking screen updates.
 
 2007-02-19  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
