--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-21  Michael McCarty <mkmccarty@raceintospace.org>
+
+	* V136
+
+	* Added Macintosh build instructions to DEVELOPER
+
 2007-02-21  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V135
