2007-02-21  Michael McCarty <mkmccarty@raceintospace.org> 	* V137 	* Modified README to request bug reports are submitted via the sf.net 	tracker

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-02-21  Michael McCarty <mkmccarty@raceintospace.org>
 
+	* V137
+
+	* Modified README to request bug reports are submitted via the sf.net
+	tracker
+
+2007-02-21  Michael McCarty <mkmccarty@raceintospace.org>
+
 	* V136
 
 	* Added Macintosh build instructions to DEVELOPER
