--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2007-02-21  Pace Willisson  <pace@rhino.pacew.com>
+
+	* V138
+
+	* add includes in fs.c mmfile.c and options.c to make it
+	compile again in Fedora Core 5.
+
+	* In options.c, change SDL_getenv to getenv.  SDL_getenv is not
+	defined on my Fedora system, but it looks like the SDL will define
+	both of these symbols on systems that don't have native getenv.
+	
+	* remove aclocal.m4 in make distclean since it is a generated file
+	
+	* move mingw32 notes farther down in DEVELOPER, since
+	it probably won't be useful to anyone now that the cygwin
+	path is working
+
 2007-02-21  Michael McCarty <mkmccarty@raceintospace.org>
 
 	* V137
