2007-02-24  Pace Willisson  <pace@rhino.pacew.com>
	* V140

	* bring rpm building up to date

	* one of the main ideas is that a simple "make; make install" on
	Linux style systems puts stuff under /usr/local, but the make that
	happens inside the rpm building process uses /usr

	* here are the main changes:

	* add DESTDIR to makefile which allows "make install" to install
	into a different tree than the program is compiled to run under

	* configure doesn't set @docdir@, so make the docdir Makefile
	variable go under ${datadir}; similarly, configure doesn't set
	@datarootdir@, so use ${datadir} for that too;

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 The original game was computer version of the Liftoff! board game by
-Fritz Bronner. It was developed by Strategic Visions and published by
-Interplay in as a disk based game in 1992 and a CD-ROM in 1994.
+Fritz Bronner. It was developed by Fritz and Michael McCarty at
+Strategic Visions and published by Interplay in as a disk based game
+in 1992 and a CD-ROM in 1994.
 
 People who have contributed to the open-source version:
 
