--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 0. License
 
-    Race Into Space is distributed under GNU General Pulic License (GPL)
+    Race Into Space is distributed under GNU General Public License (GPL)
     version 2. You can find the terms and conditions in file COPYING.
 
 1. Running the game
