--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-02-25  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
+	* V143
+
+	* mmfile.c (init_theora, init_vorbis, mm_close): Memory leaks.
+
+2007-02-25  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
 	* V142
 
 	* pace.c (brandom): Use higher bits from rand().
