--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-02-26  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V145
+
+	* .gdbinit: Typo.
+
+	* TODO: Rewritten.
+	
+	* configure.in: Advanced bugfix number.
+
 2007-02-25  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V144
