--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-02-26  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
+	* V146
+
+	* mc2.c (MisDur): Fix joint mission segfault.
+
+2007-02-26  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
 	* V145
 
 	* .gdbinit: Typo.
