2007-02-27  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net> 	* V147 	* Buzz_inc.h: Removed never_fail. 	* future.c (Future, Load_FUT_BUT): Mission selection screen won't be 	redrawn when crew selection fails. 	* mis_m.c: Fixed never_fail option.

--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@ BUGS
 These should be fixed as soon as possible as they crash the binary or
 seriously affect gameplay.
 
+ * [5] records.c(RecChange): segfault.
  * [5] endgame.c(EndPict): segfault.
  * [5] news video is not clipped, green band appears (pace, linux).
  * [3] aipur.c(RDafford):562, class == 2 && MaxRD == 80 && Safety == 90 (???).
