--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2007-02-27  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V147
+
+	* Buzz_inc.h: Removed never_fail.
+
+	* future.c (Future, Load_FUT_BUT): Mission selection screen won't be
+	redrawn when crew selection fails.
+
+	* mis_m.c: Fixed never_fail option.
+
 2007-02-26  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V146
