--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-28  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V148
+
+	* mc.c (Launch): Fix crash during average safety calculation.
+
 2007-02-27  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V147
