--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2007-03-18  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V153
+
+	* options.c (get_homedir, setup_options): Bugfix #1682988, refactor.
+	(fixpath_options): New function.
+
+	* fs.c (fix_pathsep, s_open_helper): Replace path separators.
+	(sOpen): Removed fallback flattened data dir structure.
+	(try_fopen): New function, will report errors other than ENOENT.
+
+	* utils.c (xstrdup2): New function.
+
+	* utils.h: Fix prototypes.
+
 2007-03-08  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V152
