--- a/README
+++ b/README
@@ -1,41 +1,61 @@
 0. License
 
-    Race Into Space is distributed under GNU General Public License (GPL)
-    version 2. You can find the terms and conditions in file COPYING.
+    Race  Into Space  is distributed  under GNU  General Public  License
+    (GPL)  version 2. You  can find  the  terms and  conditions in  file
+    COPYING.
 
 1. Running the game
 
-    If you have downloaded the source distribution then see DEVELOPER file.
-    Follow on once you have the game executables ready.
+    If you  have downloaded the  source distribution then  see DEVELOPER
+    file.  Follow on once you have the game executables ready.
 
-    Try to run the game, it will probably complain about missing
-    data files. This should not happen if you have downloaded and
-    properly installed one of binary distributions (ie. RPM or windows
-    installer). If you have built the game from source then get the
-    data files from http://sf.net/projects/raceintospace/
+    Try  to  run the  game,  it  will  probably complain  about  missing
+    data  files.  This  should not  happen  if you  have downloaded  and
+    properly installed  one of binary distributions  (ie. RPM or windows
+    installer). If you have built the game from source then get the data
+    files from http://sf.net/projects/raceintospace/
 
-    Once you have your data files extracted, edit the file
-    ~/.raceintospace/config - it will be created when you start
-    the game for the first time. Hopefully the file format is
-    self-explanatory.  By the way, your saved games will be stored
-    in the same directory (~/.raceintospace)
+    Once   you  have   your  data   files  extracted,   edit  the   file
+    ~/.raceintospace/config - it will be created when you start the game
+    for the  first time. Hopefully the file  format is self-explanatory.
+    By the  way, your saved games  will be stored in  the same directory
+    (~/.raceintospace)
 
-    Alternatively you can specify location of configuration directory
-    and game data directory with environment variables BARIS_SAVE
-    and BARIS_DATA, respectively. These are also supported when
-    present on the command line, ie:
+    Alternatively you  can specify  location of  configuration directory
+    and game  data directory  with environment variables  BARIS_SAVE and
+    BARIS_DATA, respectively. These  are also supported when  present on
+    the command line, ie:
 
-    $ raceintospace BARIS_DATA=$HOME/baris/
+    $ raceintospace BARIS_DATA=$HOME/baris BARIS_SAVE=$HOME/baris/saves
 
     Good luck on your way to the Moon!
 
+1a. Running on Microsoft Windows platforms.
+
+    On Windows  error messages  will go to  the stderr.txt  file created
+    in  the working  directory  (usually the  directory  where the  main
+    executable resides). Whenever  the game  crashes or  misbehaves look
+    for clues in that file.
+
+    The installer  creates shortcuts  with location  of game  data files
+    provided on  the command  line. Location of  save game  directory is
+    obtained using environment variables  HOME, HOMEPATH and USERPROFILE
+    (in that order). Users reported that  on Windows 98 neither of those
+    is set  by default.  To solve  this problem either set  one of above
+    variables  or edit  the  game shortcut's  command  line and  provide
+    desired location for save games, ie:
+
+    "c:\program files\raceintospace\raceintospace.exe"
+    "BARIS_DATA=c:\program files\raceintospace"
+    "BARIS_SAVE=c:\program files\raceintospace\saves"
+
 2. Troubleshooting
 
-    Probably you will run into some bugs, at least if you play
-    the game long enough. To help us improve raceintospace please
-    try to find a way to reproduce it and submit a bug report 
-    via the Tracker at http://sf.net/projects/raceintospace/
-    possibly accompanied by a save game file and your system 
-    information (libraries, etc.)
+    Probably you will run into some bugs,  at least if you play the game
+    long enough. To help  us improve raceintospace please try  to find a
+    way  to reproduce  it and  submit a  bug report  via the  Tracker at
+    http://sf.net/projects/raceintospace/ possibly accompanied by a save
+    game  file  and  your  system information  (os  version,  libraries,
+    environment variables, command line arguments, etc.)
 
 3. Development: see file DEVELOPER.
