--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-03-21  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V156
+
+	* main.c (main): Less puzzling error messages.
+
 2007-03-19  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V155
