--- a/raceintospace.6
+++ b/raceintospace.6
@@ -19,13 +19,16 @@ based game in 1992 and a cd-rom in 1994.
 Disable audio output
 .TP
 .B -i
-Do skip introduction screens
-.\".TP
-.\".B -f
-.\"Turn off screen fading in the game
+Skip introduction screens
+.TP
+.B -f
+Full screen mode
 .TP
 .B -n
-Enable cheating and force successful completion of each mission
+Force successful completion of each mission step
+.TP
+.B -v
+Increase verbosity. Multiple invocations accumulate
 .SH ENVIRONMENT
 .IP BARIS_DATA
 Should point at the root of directory containing data files. Defaults to \fI/usr/share/raceintospace\fR
