--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-07-171  Michael McCarty <mkmccarty@raceintospace.org>
+
+	* V167
+
+	* Modified DEVELOPER to include extra Mac notes and changed the OGG
+	  prefix to lower case
+
+	* log_default.c: Changed a printf from %d to %ld to make the Mac build happy
+
 2007-06-30  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V166
