--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-07-20  Pace Willisson  <pace@rhino.pacew.com>
+	
+	* V169
+	
+	* generate mkrpm and raceintospace.spec during autoconf
+	
+	* change version number to 0.4.2 since rpm doesn't like
+	dashes in version numbers
+
 2007-07-19  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V168
