2007-07-27  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net> 	* V171 	* Makefile.in: changed icon to Moon.ico

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-07-27  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V171
+
+	* Makefile.in: changed icon to Moon.ico
+
 2007-07-20  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V171
