2007-08-07  Will Glynn <will@lerjfhax.com> 	* V175 	* os_macosx: Re-worked OS X port: now builds straight from Xcode 	(longer dependent on autoconf), supports Fink and DarwinPorts, uses 	Cocoa to bootstrap SDL, embeds the data files inside the .app, and has 	a build target to generate a .dmg for distribution 	* AUTHORS: added self 	* DEVELOPER: updated OS X instructions 	* getport.c: added cast on xmalloc 	* gx.c: added extern reference to * screen 	* main.c: added externs.h, removed declaration of palette, and changed 	normal exit code to EXIT_SUCCESS 	* sdl.c: removed SDL icon calls under OS X, define surfaces in 	multiples of MAX_X/MAX_Y

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ People who have contributed to the open-source version:
 	Michael K McCarty <mkmccarty@raceintospace.org>
 	Pace Willisson <pace@alum.mit.edu>
 	Krzysztof Kosciuszkiewicz <k.kosciuszkiewicz@gmail.com>
+  Will Glynn <delta407@lerfjhax.com>
