2007-08-07  Will Glynn <will@lerjhax.com> 	* V176 	* os_macosx: fixed incomplete checkin

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-08-07  Will Glynn <will@lerjhax.com>
+
+	* V176
+
+	* os_macosx: fixed incomplete checkin
+
 2007-08-07  Will Glynn <will@lerjfhax.com>
 
 	* V175
