--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-08-20  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V185
+
+	* endgame.c: removed CDDA calls
+
 2007-08-17  Will Glynn <will@lerfjhax.com>
 
 	* V184
